--- a/11/1.html
+++ b/11/1.html
@@ -2,8 +2,13 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>一块石头</title>
+		<link rel="stylesheet" href="../css/233.css" />
 	</head>
 	<body>
+		<div class="a"><img src="../img/1.jpg"/></div>
+		
+		
 	</body>
+	
 </html>
