1.html编辑完成，5张图片对应网页格式完成

--- a/11/1.html
+++ b/11/1.html
@@ -6,8 +6,33 @@
 		<link rel="stylesheet" href="../css/233.css" />
 	</head>
 	<body>
+		
+		
 		<div class="a"><img src="../img/1.jpg"/></div>
 		
+		<dic class="b"><img src="../img/download.gif"/></dic>
+		<div class="d">渤海湾边汲美玉，燕鸣湖畔育英才</div>	
+		<div class="e">
+			<img src="../img/1/57-zihun110hao-wulinjianghuti-358.png"/>
+		</div>	 
+		<div class="c">
+			<textarea rows="10" cols="50" readonly     
+			style=" margin: 0px;width: 480px;height: 492px";
+			>
+			
+	
+			
+			
+			
+镌刻在石头上的字，留下了前人对我们的美好祝愿，也留下的对于燕山大学的赞美
+
+相传海上蓬莱、方丈、瀛洲是东方的‘三仙山’，也有‘五神山之说’总称为东方的蓬莱仙境
+这一神仙之说为渤海湾蒙上了一层神秘面纱。
+
+燕鸣湖畔的风光是心头忘不掉的美丽，燕宏桥上的落日是脑中挥不去的缱绻。
+无数的学子从祖国各地来到温暖的小岛，在燕大上演着他们的故事。
+			</textarea>
+		</div>
 		
 	</body>
 	
