--- a/11/4.html
+++ b/11/4.html
@@ -3,7 +3,16 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
+		<link rel="stylesheet" href="../css/233.css" />
 	</head>
 	<body>
+		<dic class="a0"><img src="../img/download.gif"/></dic>
+		<div class="a"><img src="../img/4.jpg"/></div>
+		<div class="d">渤海湾边汲美玉，燕鸣湖畔育英才</div>
+		<div class="c">
+			<textarea rows="10" cols="50" readonly     
+			style=" margin: 0px;width: 480px;height: 492px";>
+        
+			</textarea>
 	</body>
 </html>
