就是想上传了

--- a/11/2.html
+++ b/11/2.html
@@ -2,17 +2,34 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>一块石头</title>
 		<link rel="stylesheet" href="../css/233.css" />
 	</head>
 	<body>
-		<dic class="a0"><img src="../img/download.gif"/></dic>
+		
+		
 		<div class="a"><img src="../img/2.jpg"/></div>
-		<div class="d">渤海湾边汲美玉，燕鸣湖畔育英才</div>
+		
+		<dic class="b"><img src="../img/download.gif"/></dic>
+		<div class="d">甲子辉煌创佳绩，百年校庆蛋糕甜</div>	
+		<div class="e">
+			<img src="../img/15-zihun55hao-longyinshoushu-fda.png"/>
+		</div>	 
 		<div class="c">
 			<textarea rows="10" cols="50" readonly     
-			style=" margin: 0px;width: 480px;height: 492px";>
-        
+			style=" margin: 0px;width: 480px;height: 492px";
+			>
+			
+	
+			
+			
+			
+听说我们开学非常早的时候还挺纳闷的，不知道问什么比别人早了好久，来了之后听学长说是因为想让我们一起参加校庆。
+当时分蛋糕的时候人非常多，等了好久才有了这次拍照的机会。蛋糕真的超级超级超级超级超级大，嗯大概和这些超级一样超级，嗯没错！
+当时还挺热的，挺担心蛋糕会烤化了.......
 			</textarea>
+		</div>
+		
 	</body>
+	
 </html>
