--- a/11/3.html
+++ b/11/3.html
@@ -2,17 +2,34 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>一块石头</title>
 		<link rel="stylesheet" href="../css/233.css" />
 	</head>
 	<body>
-		<dic class="a0"><img src="../img/download.gif"/></dic>
+		
+		
 		<div class="a"><img src="../img/3.jpg"/></div>
-		<div class="d">渤海湾边汲美玉，燕鸣湖畔育英才</div>
+		
+		<dic class="b"><img src="../img/download.gif"/></dic>
+		<div class="d">饭菜飘香大榕树，好吃不贵真舒服</div>	
+		<div class="e">
+			<img src="../img/48-zihun24hao-zhenhunshoushu-38a.png"/>
+		</div>	 
 		<div class="c">
 			<textarea rows="10" cols="50" readonly     
-			style=" margin: 0px;width: 480px;height: 492px";>
-        
+			style=" margin: 0px;width: 480px;height: 492px";
+			>
+			
+	
+			
+			
+			
+开学的第一天中午，我和舍友们就是去吃的大榕树食堂，刚进来的时候是真的有被惊艳到，和高中的食堂相比真的是好看了很多。
+饭菜是真的好吃！种类超级多！
+烤鱼，烤肉鸡扒饭，旋转小火锅，牛肉拉面，麻辣烫，中式快餐，真的各种各样的美食都有！！！！！
 			</textarea>
+		</div>
+		
 	</body>
+	
 </html>
