禁止文本框缩放

--- a/11/4.html
+++ b/11/4.html
@@ -11,9 +11,9 @@
 		<div class="a"><img src="../img/4.jpg"/></div>
 		
 		<dic class="b"><img src="../img/download.gif"/></dic>
-		<div class="d">渤海湾边汲美玉，燕鸣湖畔育英才</div>	
+		<div class="d">挥汗如雨网球场，秋风萧瑟冷难防</div>	
 		<div class="e">
-			<img src="../img/1/57-zihun110hao-wulinjianghuti-358.png"/>
+			<img src="../img/75-yixingediaohei-6e9.png"/>
 		</div>	 
 		<div class="c">
 			<textarea rows="10" cols="50" readonly     
