--- a/11/1.html
+++ b/11/1.html
@@ -18,6 +18,7 @@
 		<div class="c">
 			<textarea rows="10" cols="50" readonly     
 			style=" margin: 0px;width: 480px;height: 492px";
+			resize: none;
 			>
 			
 	
