做好了网球篇

--- a/11/4.html
+++ b/11/4.html
@@ -24,13 +24,9 @@
 			
 			
 			
-镌刻在石头上的字，留下了前人对我们的美好祝愿，也留下的对于燕山大学的赞美
-
-相传海上蓬莱、方丈、瀛洲是东方的‘三仙山’，也有‘五神山之说’总称为东方的蓬莱仙境
-这一神仙之说为渤海湾蒙上了一层神秘面纱。
-
-燕鸣湖畔的风光是心头忘不掉的美丽，燕宏桥上的落日是脑中挥不去的缱绻。
-无数的学子从祖国各地来到温暖的小岛，在燕大上演着他们的故事。
+虽然我小时候就对网球很有兴趣，等到上了大学，才发现，机会来了。网球场一片一片的，竟然比乒乓球羽毛球场还要多，网球课也是一堆一堆的。
+我选择网球，并不是因为学的好才喜欢，而是因为喜欢，才去学它。
+在学习的过程中，网球给我带来了很多有用的东西，让我有了强力的进取心，让我懂得了想与做结合是解决问题的最佳途径。
 			</textarea>
 		</div>
 		
