--- a/11/5.html
+++ b/11/5.html
@@ -11,9 +11,9 @@
 		<div class="a"><img src="../img/5.jpg"/></div>
 		
 		<dic class="b"><img src="../img/download.gif"/></dic>
-		<div class="d">渤海湾边汲美玉，燕鸣湖畔育英才</div>	
+		<div class="d">兴隆广缘便利店，这里没你买不到</div>	
 		<div class="e">
-			<img src="../img/1/57-zihun110hao-wulinjianghuti-358.png"/>
+			<img src="../img/92-zilinggaobaiti-4ff.png"/>
 		</div>	 
 		<div class="c">
 			<textarea rows="10" cols="50" readonly     
@@ -24,13 +24,9 @@
 			
 			
 			
-镌刻在石头上的字，留下了前人对我们的美好祝愿，也留下的对于燕山大学的赞美
-
-相传海上蓬莱、方丈、瀛洲是东方的‘三仙山’，也有‘五神山之说’总称为东方的蓬莱仙境
-这一神仙之说为渤海湾蒙上了一层神秘面纱。
-
-燕鸣湖畔的风光是心头忘不掉的美丽，燕宏桥上的落日是脑中挥不去的缱绻。
-无数的学子从祖国各地来到温暖的小岛，在燕大上演着他们的故事。
+广缘超市真的非常方便，什么东西都有，小到一卷胶带，大到行李箱。
+刚来的时候好多东西都没有带，幸亏有超市售卖各种生活用品。
+超市还有好多好多的餐饮店铺，味道也是非常非常的好，有机会一定要去尝一尝。
 			</textarea>
 		</div>
 		
