首页更改，子页面标title更改

--- a/11/1.html
+++ b/11/1.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>一块石头</title>
+		<title>刻字石</title>
 		<link rel="stylesheet" href="../css/233.css" />
 	</head>
 	<body>
