--- a/11/4.html
+++ b/11/4.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>一块石头</title>
+		<title>网球场</title>
 		<link rel="stylesheet" href="../css/233.css" />
 	</head>
 	<body>
@@ -11,7 +11,7 @@
 		<div class="a"><img src="../img/4.jpg"/></div>
 		
 		<dic class="b"><img src="../img/download.gif"/></dic>
-		<div class="d">挥汗如雨网球场，秋风萧瑟冷难防</div>	
+		<div class="d">挥汗如雨网球场，夏日炎炎热难防</div>	
 		<div class="e">
 			<img src="../img/75-yixingediaohei-6e9.png"/>
 		</div>	 
