--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 				<div class="nav">
 					<img  style="float: right; " src="./img/logo1.png" />
 					<a class="首页 "href="index.html">首页</a>
-					<a href="yan 大初印象.html">初识燕大</a>
+					<a href="yan 大初印象.html">燕大初印象</a>		
 					<a href="11/1.html">刻字石</a>
 					<a href="11/2.html">校庆蛋糕</a>
 					<a href="11/3.html">大榕树</a>
 					<a href="11/4.html">网球场</a>
-					<a href="11/5.html">广缘超市</a>				
+					<a href="11/5.html">广缘超市</a>			
 				</div>
 			</div>
 			<div class="main">
