--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				<div class="nav">
 					<img  style="float: right; " src="./img/logo1.png" />
 					<a class="首页 "href="index.html">首页</a>
-					<a href="yan 大初印象.html">燕大初印象</a>		
+					<a href="初识燕大.html">燕大初印象</a>		
 					<a href="11/1.html">刻字石</a>
 					<a href="11/2.html">校庆蛋糕</a>
 					<a href="11/3.html">大榕树</a>
