校徽超链接到学校官网

--- a/11/1.html
+++ b/11/1.html
@@ -7,10 +7,10 @@
 	</head>
 	<body>
 		
-		
+		<a class="首页 "href="../index.html">首页</a>
 		<div class="a"><img src="../img/1.jpg"/></div>
 		
-		<dic class="b"><img src="../img/download.gif"/></dic>
+		<a calss="b" href=" https://www.ysu.edu.cn/"target="_blank"><img src="../img/download.gif"/></a>
 		<div class="d">渤海湾边汲美玉，燕鸣湖畔育英才</div>	
 		<div class="e">
 			<img src="../img/1/57-zihun110hao-wulinjianghuti-358.png"/>
