--- a/11/4.html
+++ b/11/4.html
@@ -7,10 +7,10 @@
 	</head>
 	<body>
 		
-		
+		<a class="首页 "href="../index.html">首页</a>
 		<div class="a"><img src="../img/4.jpg"/></div>
 		
-		<dic class="b"><img src="../img/download.gif"/></dic>
+		<a calss="b" href=" https://www.ysu.edu.cn/"target="_blank"><img src="../img/download.gif"/></a>
 		<div class="d">挥汗如雨网球场，夏日炎炎热难防</div>	
 		<div class="e">
 			<img src="../img/75-yixingediaohei-6e9.png"/>
