--- a/11/5.html
+++ b/11/5.html
@@ -7,10 +7,10 @@
 	</head>
 	<body>
 		
-		
+		<a class="首页 "href="../index.html">首页</a>
 		<div class="a"><img src="../img/5.jpg"/></div>
 		
-		<dic class="b"><img src="../img/download.gif"/></dic>
+		<a calss="b" href=" https://www.ysu.edu.cn/"target="_blank"><img src="../img/download.gif"/></a>
 		<div class="d">兴隆广缘便利店，这里没你买不到</div>	
 		<div class="e">
 			<img src="../img/92-zilinggaobaiti-4ff.png"/>
