--- a/11/2.html
+++ b/11/2.html
@@ -7,10 +7,10 @@
 	</head>
 	<body>
 		
-		
+		<a class="首页 "href="../index.html">首页</a>
 		<div class="a"><img src="../img/2.jpg"/></div>
 		
-		<dic class="b"><img src="../img/download.gif"/></dic>
+		<a calss="b" href=" https://www.ysu.edu.cn/"target="_blank"><img src="../img/download.gif"/></a>
 		<div class="d">甲子辉煌创佳绩，百年校庆蛋糕甜</div>	
 		<div class="e">
 			<img src="../img/15-zihun55hao-longyinshoushu-fda.png"/>
