--- a/11/3.html
+++ b/11/3.html
@@ -7,10 +7,10 @@
 	</head>
 	<body>
 		
-		
+		<a class="首页 "href="../index.html">首页</a>
 		<div class="a"><img src="../img/3.jpg"/></div>
 		
-		<dic class="b"><img src="../img/download.gif"/></dic>
+		<a calss="b" href=" https://www.ysu.edu.cn/"target="_blank"><img src="../img/download.gif"/></a>
 		<div class="d">饭菜飘香大榕树，好吃不贵真舒服</div>	
 		<div class="e">
 			<img src="../img/48-zihun24hao-zhenhunshoushu-38a.png"/>
