--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 		<div id="warpper">
 		
 			<div class="header">
+				<a href="https://www.ysu.edu.cn/"target="_blank"><img  style="float: right; " src="./img/logo1.png" /></a>
 				<div class="nav">
-					<img  style="float: right; " src="./img/logo1.png" />
+				
 					<a class="首页 "href="index.html">首页</a>
 					<a href="初识燕大.html">燕大初印象</a>		
 					<a href="11/1.html">刻字石</a>
