--- a/初识燕大.html
+++ b/初识燕大.html
@@ -14,8 +14,10 @@
 	</head>
 	
 	<body>
+		<a class="b" href=" https://www.ysu.edu.cn/"target="_blank"><img src="img/download.gif"/></a>
+		<a class="首页 "href="index.html">首页</a>
 	<div class="img">
-		    <a>给我印象最深的几个地方</a>
+		    <a class="印象">给我印象最深的几个地方</a>
 		<img src="img/2333.jpg" />
 	</div>
 
