--- a/初识燕大.html
+++ b/初识燕大.html
@@ -4,7 +4,8 @@
 		<meta charset="utf-8">
 		<title>燕大初印象</title>
 		<link href="css/初识燕大.css" rel="stylesheet"/>
-		
+		<link rel="stylesheet" href="./css/bubbles.css" type="text/css" />
+
 		   <script src="js/初识燕大.js">
 		
 		   </script>
@@ -13,7 +14,20 @@
 		</style>
 	</head>
 	
-	<body>
+	<body style="overflow:hidden">
+		
+		<ul class="bg-bubbles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
 		<a class="b" href=" https://www.ysu.edu.cn/"target="_blank"><img src="img/download.gif"/></a>
 		<a class="首页 "href="index.html">首页</a>
 	<div class="img">
