--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 		<title>IYanDa</title>
 		<link rel="stylesheet" href="css/common.css" />
 	</head>
-	<body>
+	<body style="overflow:hidden">
 		<div id="warpper">
 		
 			<div class="header">
-				<a href="https://www.ysu.edu.cn/"target="_blank"><img  style="float: right; " src="./img/logo1.png" /></a>
+				<a  calss="hi" href="https://www.ysu.edu.cn/"target="_blank"><img  style="float: right; " src="./img/logo1.png" /></a>
 				<div class="nav">
 				
 					<a class="首页 "href="index.html">首页</a>
@@ -21,6 +21,7 @@
 					<a href="11/5.html">广缘超市</a>			
 				</div>
 			</div>
+			
 			<div class="main">
 			
 			</div>
