--- a/初识燕大.html
+++ b/初识燕大.html
@@ -15,6 +15,15 @@
 	</head>
 	
 	<body style="overflow:hidden">
+		<div class="button-style1">
+            <a href="./index.html" class="lk1">
+                <div class="link1">
+                    <div class="bt1">
+                        首页
+                    </div>
+                </div>
+            </a>
+        </div>
 		
 		<ul class="bg-bubbles">
             <li></li>
@@ -29,7 +38,7 @@
             <li></li>
           </ul>
 		<a class="b" href=" https://www.ysu.edu.cn/"target="_blank"><img src="img/download.gif"/></a>
-		<a class="首页 "href="index.html">首页</a>
+		
 	<div class="img">
 		    <a class="印象">给我印象最深的几个地方</a>
 		<img src="img/2333.jpg" />
