--- a/11/2.html
+++ b/11/2.html
@@ -6,8 +6,16 @@
 		<link rel="stylesheet" href="../css/233.css" />
 	</head>
 	<body>
+		<div class="button-style1">
+			<a href="../index.html" class="lk1">
+                <div class="link1">
+                    <div class="bt1">
+                        首页
+                    </div>
+                </div>
+            </a>
+        </div>
 		
-		<a class="首页 "href="../index.html">首页</a>
 		<div class="a"><img src="../img/2.jpg"/></div>
 		
 		<a calss="b" href=" https://www.ysu.edu.cn/"target="_blank"><img src="../img/download.gif"/></a>
