--- a/11/4.html
+++ b/11/4.html
@@ -7,7 +7,16 @@
 	</head>
 	<body>
 		
-		<a class="首页 "href="../index.html">首页</a>
+		<div class="button-style1">
+			<a href="../index.html" class="lk1">
+                <div class="link1">
+                    <div class="bt1">
+                        首页
+                    </div>
+                </div>
+            </a>
+        </div>
+		
 		<div class="a"><img src="../img/4.jpg"/></div>
 		
 		<a calss="b" href=" https://www.ysu.edu.cn/"target="_blank"><img src="../img/download.gif"/></a>
